--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -DskipTests -B package --file pom.xml
+      run: mvn --batch-mode -DskipTests package
     - name: Test
       run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
     - name: Report
